# hackathon-upload

./: .gitignore  LICENSE  README.md
backend/: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
backend/demo/: route_with_shadow.html  route_with_shadow_emptydata.html  shadow.html
backend/migrations/: README  env.py  script.py.mako
backend/migrations/versions/: 202411051200_create_baseline.py  202411051230_buildings_table_from_raw.py
backend/src/: main.py
backend/src/api/: schemas.py
backend/src/api/routes/: shadow.py
backend/src/db/: database.py
backend/src/db/queries/: building_shadow_geojson.sql  route_shadow_intersection.sql
backend/src/utils/: shadow_area.py  shadow_route_optimizer.py
backend/utils/: buildings_transform.sql  import_buildings.sh  merge_shadow_query.sql  solar_position.py
flutter/: Makefile
flutter/ios/Runner/: Info.plist
flutter/lib/util/: tp_web_view.dart
frontend/: README.md  eslint.config.js  nuxt.config.ts  package.json  pnpm-lock.yaml
frontend/app/: app.config.ts  spa-loading-template.html
frontend/app/components/: MapProfileDrawer.vue  MapView.vue  PlaceAutocomplete.vue  TouchJoystick.vue
frontend/app/composables/: useFlutter.ts  useGameGeolocation.ts  useGameMap.ts  useGooglePlaces.ts  useKeyboardMovement.ts  useMapBubbles.ts  useMapBuildingShadows.ts  useMapCamera.ts  useMapToilets.ts  useMapWaterDispensers.ts  useMapbox.ts  usePlayerEvolution.ts  useVirtualJoyStick.ts  useWalkDistanceTracker.ts
frontend/app/constants/: playerEvolution.ts
(+36 files in other folders)
